--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "createjs-cmd": "^0.1.0",
         "element-ui": "^2.10.1",
         "gsap": "^2.1.3",
+        "hammerjs": "^2.0.8",
         "html-loader": "^0.5.5",
         "jquery": "^3.5.1",
         "register-service-worker": "^1.6.2",
