--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@fortawesome/vue-fontawesome": "^0.1.6",
         "@saeris/vue-spinners": "^1.0.8",
         "@xunlei/vue-lazy-component": "^1.1.3",
+        "animate.css": "^4.1.1",
         "aos": "^3.0.0-beta.6",
         "cache-loader": "^4.1.0",
         "core-js": "^2.6.12",
@@ -42,7 +43,8 @@
         "vue-svg-loader": "^0.12.0",
         "vue-svgicon": "^4.0.0-alpha.3",
         "vue2-touch-events": "^2.3.1",
-        "vuex": "^3.0.1"
+        "vuex": "^3.0.1",
+        "wowjs": "^1.1.3"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "^3.12.1",
