--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "core-js": "^2.6.12",
         "createjs-cmd": "^0.1.0",
         "element-ui": "^2.10.1",
+        "fullpage.js": "^2.9.7",
         "gsap": "^2.1.3",
         "html-loader": "^0.5.5",
         "jquery": "^3.5.1",
@@ -28,7 +29,7 @@
         "vue": "^2.6.10",
         "vue-awesome-swiper": "^4.1.1",
         "vue-carousel-3d": "^0.2.0",
-        "vue-fullpage.js": "^0.1.5",
+        "vue-fullpage.js": "^0.1.7",
         "vue-image-zoomer": "^1.2.1",
         "vue-inner-image-zoom": "^1.0.1",
         "vue-lazyload": "^1.3.1",
