--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "cache-loader": "^4.1.0",
         "core-js": "^2.6.12",
         "createjs-cmd": "^0.1.0",
+        "dragscroll": "0.0.8",
         "element-ui": "^2.10.1",
         "gsap": "^2.1.3",
         "html-loader": "^0.5.5",
