--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
         "html-loader": "^0.5.5",
         "jquery": "^3.5.1",
         "register-service-worker": "^1.6.2",
+        "swiper": "5.x",
         "vue": "^2.6.10",
-        "vue-awesome-swiper": "^3.1.3",
+        "vue-awesome-swiper": "^4.1.1",
         "vue-carousel-3d": "^0.2.0",
         "vue-fullpage.js": "^0.1.5",
         "vue-lazyload": "^1.3.1",
