--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,9 @@
+
+RewriteEngine on
 Options -Indexes
 RewriteCond %{SERVER_PORT} ^80$
 RewriteRule ^(.*)$ https://%{SERVER_NAME}%{REQUEST_URI} [L,R]
 ErrorDocument 404 /index.php 
+RewriteCond %{HTTP_HOST} ^sm\.h35\.tw$
+RewriteRule ^/?$ "https\:\/\/sm\-h35\.tw\/" [R=301,L]
+
