--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "jquery.ripples": "^0.6.3",
         "pannellum": "^2.5.6",
         "register-service-worker": "^1.6.2",
+        "scrollbooster": "^3.0.2",
         "swiper": "5.x",
         "vue": "^2.6.10",
         "vue-awesome-swiper": "^4.1.1",
