--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "vue-scrollto": "^2.15.0",
         "vue-svg-loader": "^0.12.0",
         "vue-svgicon": "^4.0.0-alpha.3",
+        "vue-youtube": "^1.4.0",
         "vue2-touch-events": "^2.3.1",
         "vuex": "^3.0.1"
     },
