--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "vue-lazyload": "^1.3.1",
         "vue-parallaxy": "^1.1.1",
         "vue-photo-zoom-pro": "^1.2.12",
+        "vue-plugin-load-script": "^1.3.5",
         "vue-recaptcha": "^1.3.0",
         "vue-recaptcha-v3": "^1.7.0",
         "vue-rellax": "^0.1.0",
