--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "hamburgers": "^1.1.3",
         "hammerjs": "^2.0.8",
         "html-loader": "^0.5.5",
+        "imagemin-webp-webpack-plugin-2": "https://github.com/minchemo/imagemin-webp-webpack-plugin",
         "is-in-viewport": "^3.0.4",
         "jquery": "^3.5.1",
         "jquery-ui-dist": "^1.12.1",
