--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "hammerjs": "^2.0.8",
         "html-loader": "^0.5.5",
         "imagemin-webp-webpack-plugin-2": "https://github.com/minchemo/imagemin-webp-webpack-plugin",
+        "interactjs": "^1.10.11",
         "is-in-viewport": "^3.0.4",
         "jquery": "^3.5.1",
         "jquery-ui-dist": "^1.12.1",
