--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "jquery": "^3.5.1",
         "jquery-ui-dist": "^1.12.1",
         "jquery.ripples": "^0.6.3",
+        "locomotive-scroll": "^4.1.3",
         "pannellum": "^2.5.6",
         "register-service-worker": "^1.6.2",
         "scrollbooster": "^3.0.2",
@@ -50,6 +51,7 @@
         "vue-scrollto": "^2.15.0",
         "vue-svg-loader": "^0.12.0",
         "vue-svgicon": "^4.0.0-alpha.3",
+        "vue2-smooth-scroll": "^1.5.1",
         "vue2-touch-events": "^2.3.1",
         "vuex": "^3.0.1"
     },
