--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@xunlei/vue-lazy-component": "^1.1.3",
         "animate": "^1.0.0",
         "aos": "^3.0.0-beta.6",
+        "better-scroll": "^2.4.2",
         "cache-loader": "^4.1.0",
         "core-js": "^2.6.12",
         "createjs-cmd": "^0.1.0",
