--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,7 @@
 Options -Indexes
 RewriteCond %{SERVER_PORT} ^80$
-ErrorDocument 404 /index.php 
+RewriteRule ^(.*)$ https://%{SERVER_NAME}%{REQUEST_URI} [L,R]
+ErrorDocument 404 /index.php
 <IfModule mod_headers.c>
     Header set Cache-Control "no-cache, no-store, must-revalidate"
     Header set Pragma "no-cache"
