--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "@saeris/vue-spinners": "^1.0.8",
         "@xunlei/vue-lazy-component": "^1.1.3",
         "animate": "^1.0.0",
-        "aos": "^3.0.0-beta.6",
+        "animate.css": "^4.1.1",
+        "aos": "^2.3.4",
         "better-scroll": "^2.4.2",
         "cache-loader": "^4.1.0",
         "core-js": "^2.6.12",
