--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "jquery.ripples": "^0.6.3",
         "locomotive-scroll": "^4.1.3",
         "pannellum": "^2.5.6",
+        "parallax-js": "^3.1.0",
         "register-service-worker": "^1.6.2",
         "scrollbooster": "^3.0.2",
         "swiper": "5.x",
