--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "@fortawesome/free-solid-svg-icons": "^5.9.0",
         "@fortawesome/vue-fontawesome": "^0.1.6",
         "@saeris/vue-spinners": "^1.0.8",
-        "@splidejs/vue-splide": "0.3.5",
+        "@splidejs/vue-splide": "^0.3.5",
         "@xunlei/vue-lazy-component": "^1.1.3",
         "animate": "^1.0.0",
         "aos": "^3.0.0-beta.6",
