--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
         "sass": "^1.18.0",
         "sass-loader": "^7.1.0",
         "vue-cli-plugin-element": "^1.0.1",
+        "vue-svg-inline-loader": "^2.1.3",
         "vue-template-compiler": "^2.6.10"
     }
 }
