--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@splidejs/vue-splide": "^0.3.5",
         "@xunlei/vue-lazy-component": "^1.1.3",
         "animate": "^1.0.0",
+        "animate.css": "3.5.2",
         "aos": "^3.0.0-beta.6",
         "better-scroll": "^2.4.2",
         "cache-loader": "^4.1.0",
@@ -41,6 +42,7 @@
         "swiper": "5.x",
         "uikit": "^3.9.4",
         "vue": "^2.6.10",
+        "vue-animate-onscroll": "^1.0.8",
         "vue-awesome-swiper": "^4.1.1",
         "vue-carousel-3d": "^0.2.0",
         "vue-fullpage.js": "^0.1.5",
