--- a/package.json
+++ b/package.json
@@ -75,5 +75,10 @@
         "sass-loader": "^7.1.0",
         "vue-cli-plugin-element": "^1.0.1",
         "vue-template-compiler": "^2.6.10"
+    },
+    "pnpm": {
+        "peerDependencyRules": {
+            "auto-install-peers": true
+        }
     }
 }
