--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "path": "^0.12.7",
     "sass": "^1.52.3",
     "vue": "^3.2.25",
+    "vue-mobile-detection": "^2.0.1",
+    "vue-recaptcha": "^2.0.2",
     "vue-router": "^4.0.13",
-    "vue3-mobile-detection": "^1.0.5",
+    "vue-toastification": "2.0.0-rc.5",
     "webpack": "^5.73.0"
   },
   "devDependencies": {
