--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-recaptcha": "^2.0.2",
     "vue-router": "^4.0.13",
     "vue-toastification": "2.0.0-rc.5",
+    "vue3-smooth-scroll": "^0.8.1",
     "webpack": "^5.73.0"
   },
   "devDependencies": {
