--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@splidejs/vue-splide": "^0.6.7",
+    "aos": "3.0.0-beta.6",
     "daisyui": "^2.15.3",
     "fs": "0.0.1-security",
     "html-minifier": "^4.0.0",
