--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue-router": "^4.0.13",
     "vue-toastification": "2.0.0-rc.5",
     "vue3-smooth-scroll": "^0.8.1",
+    "vue3-touch-events": "^4.1.0",
     "webpack": "^5.73.0"
   },
   "devDependencies": {
