--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "daisyui": "^2.15.3",
     "fs": "0.0.1-security",
     "html-minifier": "^4.0.0",
+    "jquery": "^3.6.0",
+    "jquery.transit": "^0.9.12",
     "path": "^0.12.7",
     "sass": "^1.52.3",
     "swiper": "^8.3.0",
