--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@splidejs/vue-splide": "^0.6.7",
     "aos": "^2.3.4",
     "daisyui": "^2.15.3",
+    "eruda": "^2.5.0",
     "fs": "0.0.1-security",
     "html-minifier": "^4.0.0",
     "jquery": "^3.6.0",
