--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jquery": "^3.6.0",
     "jquery.transit": "^0.9.12",
     "path": "^0.12.7",
+    "pinia": "^2.1.6",
     "sass": "^1.52.3",
     "swiper": "^8.3.0",
     "vue": "^3.2.25",
