--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@better-scroll/core": "^2.4.2",
     "@gtm-support/vue-gtm": "^1.6.0",
     "@splidejs/vue-splide": "^0.6.7",
+    "animejs": "^3.2.1",
     "aos": "^2.3.4",
     "daisyui": "^2.15.3",
     "fs": "0.0.1-security",
