--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "html-minifier": "^4.0.0",
     "jquery": "^3.6.0",
     "jquery.transit": "^0.9.12",
+    "node-fetch": "^3.3.2",
     "path": "^0.12.7",
     "sass": "^1.52.3",
     "swiper": "^8.3.0",
