--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@better-scroll/core": "^2.4.2",
     "@gtm-support/vue-gtm": "^1.6.0",
+    "@popperjs/core": "^2.11.8",
     "@splidejs/vue-splide": "^0.6.7",
     "aos": "^2.3.4",
     "daisyui": "^2.15.3",
@@ -21,6 +22,7 @@
     "path": "^0.12.7",
     "sass": "^1.52.3",
     "swiper": "^8.3.0",
+    "v-calendar": "^3.1.2",
     "vue": "^3.2.25",
     "vue-lazyload": "3.0.0-rc.2",
     "vue-mobile-detection": "^2.0.1",
